Fix button nowrap

--- a/src/wp-content/themes/tuleva/scss/_variables.scss
+++ b/src/wp-content/themes/tuleva/scss/_variables.scss
@@ -174,6 +174,7 @@ $card-border-radius: $border-radius-md;
 // Buttons
 $btn-font-weight: 500 !default;
 $btn-border-radius-xl: 8px !default;
+$btn-white-space: nowrap !default;
 $padding-xl-horizontal: 60px !default;
 $padding-xl-vertical: 16px !default;
 
